; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/filemon/extr_filemon.c_filemon_proc_get.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/filemon/extr_filemon.c_filemon_proc_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filemon = type { i32 }
%struct.proc = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.filemon* (%struct.proc*)* @filemon_proc_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.filemon* @filemon_proc_get(%struct.proc* %0) #0 {
  %2 = alloca %struct.filemon*, align 8
  %3 = alloca %struct.proc*, align 8
  %4 = alloca %struct.filemon*, align 8
  store %struct.proc* %0, %struct.proc** %3, align 8
  %5 = load %struct.proc*, %struct.proc** %3, align 8
  %6 = getelementptr inbounds %struct.proc, %struct.proc* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.filemon* null, %struct.filemon** %2, align 8
  br label %27

10:                                               ; preds = %1
  %11 = load %struct.proc*, %struct.proc** %3, align 8
  %12 = call i32 @PROC_LOCK(%struct.proc* %11)
  %13 = load %struct.proc*, %struct.proc** %3, align 8
  %14 = getelementptr inbounds %struct.proc, %struct.proc* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = call %struct.filemon* @filemon_acquire(i32* %15)
  store %struct.filemon* %16, %struct.filemon** %4, align 8
  %17 = load %struct.proc*, %struct.proc** %3, align 8
  %18 = call i32 @PROC_UNLOCK(%struct.proc* %17)
  %19 = load %struct.filemon*, %struct.filemon** %4, align 8
  %20 = icmp eq %struct.filemon* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %10
  store %struct.filemon* null, %struct.filemon** %2, align 8
  br label %27

22:                                               ; preds = %10
  %23 = load %struct.filemon*, %struct.filemon** %4, align 8
  %24 = getelementptr inbounds %struct.filemon, %struct.filemon* %23, i32 0, i32 0
  %25 = call i32 @sx_xlock(i32* %24)
  %26 = load %struct.filemon*, %struct.filemon** %4, align 8
  store %struct.filemon* %26, %struct.filemon** %2, align 8
  br label %27

27:                                               ; preds = %22, %21, %9
  %28 = load %struct.filemon*, %struct.filemon** %2, align 8
  ret %struct.filemon* %28
}

declare dso_local i32 @PROC_LOCK(%struct.proc*) #1

declare dso_local %struct.filemon* @filemon_acquire(i32*) #1

declare dso_local i32 @PROC_UNLOCK(%struct.proc*) #1

declare dso_local i32 @sx_xlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
